// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: Comment > deleting comment 1`] = `
<body>
  <div>
    <div
      class="mb-4"
    >
      <button
        class="absolute right-12 rounded-full transition-colors transition-all after:content-['\\\\2715'] hover:scale-125 hover:text-highlight-red"
      />
      <div
        class="flex h-20 w-full items-center justify-center"
      >
        <div
          class="text-lg"
        >
          Are you sure you want to delete this comment?
        </div>
      </div>
      <div
        class="flex justify-end border-b pb-3"
      >
        <button
          class="h-10 w-32 rounded-md border bg-highlight-red text-center text-white transition-all hover:cursor-pointer hover:bg-gray-700"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Snapshot: Comment > editing comment 1`] = `
<body>
  <div>
    <div
      class="relative m-3 rounded-md border-b p-4"
    >
      <div
        class="flex"
      >
        <div
          class="avatar self-center transition-all hover:scale-110"
        >
           
          <a
            href="/profile/test-user-id"
          >
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] "
              src="https://i.stack.imgur.com/34AD2.jpg"
              style="width: 2.5rem;"
            />
          </a>
        </div>
        <div
          class="ml-3"
        >
          <a
            href="/profile/test-user-id"
          >
            <p
              class="text-lg font-bold hover:underline"
            >
              Test User
            </p>
          </a>
          <p
            class="tex-gray-400 text-sm"
          >
            0 seconds ago
          </p>
        </div>
        <div
          class="absolute right-4 mt-[-12px] self-center"
        >
          <div
            class="dropdown-left dropdown rounded-md"
          >
            <button
              class="transition-all hover:scale-125"
              data-testid="comment-actions-button"
            >
              <div>
                <svg
                  height="24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 20q-.825 0-1.412-.587Q10 18.825 10 18q0-.825.588-1.413Q11.175 16 12 16t1.413.587Q14 17.175 14 18q0 .825-.587 1.413Q12.825 20 12 20Zm0-6q-.825 0-1.412-.588Q10 12.825 10 12t.588-1.413Q11.175 10 12 10t1.413.587Q14 11.175 14 12q0 .825-.587 1.412Q12.825 14 12 14Zm0-6q-.825 0-1.412-.588Q10 6.825 10 6t.588-1.412Q11.175 4 12 4t1.413.588Q14 5.175 14 6t-.587 1.412Q12.825 8 12 8Z"
                  />
                </svg>
              </div>
            </button>
            <ul
              class="dropdown-content menu mt-8 mr-[-16px] w-52 rounded-md border bg-white shadow"
              tabindex="0"
            >
              <li
                class="p-3 text-start transition-all hover:cursor-pointer hover:bg-gray-100"
                data-testid="edit-comment"
              >
                Edit
              </li>
              <li
                class="p-3 text-start transition-all hover:cursor-pointer hover:bg-gray-100"
                data-testid="delete-comment"
              >
                Delete
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="mt-3 p-2"
        data-testid="edit-comment-div"
      >
        <input
          class="input-bordered mb-3 w-full rounded-md border p-3"
          placeholder="Can't be empty!"
          type="text"
          value="Hello world"
        />
        <div
          class="flex justify-end gap-2"
        >
          <button
            class="h-10 w-32 rounded-md border-highlight-green bg-highlight-green transition-all hover:bg-gray-700 hover:text-highlight-green"
          >
            Save
          </button>
          <button
            class="h-10 w-32 rounded-md border bg-white text-center text-black transition-all hover:cursor-pointer hover:bg-highlight-red hover:text-white"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Snapshot: Comment > render comment 1`] = `
<body>
  <div>
    <div
      class="relative m-3 rounded-md border-b p-4"
    >
      <div
        class="flex"
      >
        <div
          class="avatar self-center transition-all hover:scale-110"
        >
           
          <a
            href="/profile/test-user-id"
          >
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] "
              src="https://i.stack.imgur.com/34AD2.jpg"
              style="width: 2.5rem;"
            />
          </a>
        </div>
        <div
          class="ml-3"
        >
          <a
            href="/profile/test-user-id"
          >
            <p
              class="text-lg font-bold hover:underline"
            >
              Test User
            </p>
          </a>
          <p
            class="tex-gray-400 text-sm"
          >
            0 seconds ago
          </p>
        </div>
        <div
          class="absolute right-4 mt-[-12px] self-center"
        >
          <div
            class="dropdown-left dropdown rounded-md"
          >
            <button
              class="transition-all hover:scale-125"
              data-testid="comment-actions-button"
            >
              <div>
                <svg
                  height="24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 20q-.825 0-1.412-.587Q10 18.825 10 18q0-.825.588-1.413Q11.175 16 12 16t1.413.587Q14 17.175 14 18q0 .825-.587 1.413Q12.825 20 12 20Zm0-6q-.825 0-1.412-.588Q10 12.825 10 12t.588-1.413Q11.175 10 12 10t1.413.587Q14 11.175 14 12q0 .825-.587 1.412Q12.825 14 12 14Zm0-6q-.825 0-1.412-.588Q10 6.825 10 6t.588-1.412Q11.175 4 12 4t1.413.588Q14 5.175 14 6t-.587 1.412Q12.825 8 12 8Z"
                  />
                </svg>
              </div>
            </button>
            <ul
              class="dropdown-content menu mt-8 mr-[-16px] w-52 rounded-md border bg-white shadow"
              tabindex="0"
            >
              <li
                class="p-3 text-start transition-all hover:cursor-pointer hover:bg-gray-100"
                data-testid="edit-comment"
              >
                Edit
              </li>
              <li
                class="p-3 text-start transition-all hover:cursor-pointer hover:bg-gray-100"
                data-testid="delete-comment"
              >
                Delete
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="break-words"
      >
        <p
          class="mt-4 w-full"
        >
          Hello world
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Snapshot: Comment > render comment deleted 1`] = `
<body>
  <div />
</body>
`;

exports[`Snapshot: Comment > render comment updated 1`] = `
<body>
  <div>
    <div
      class="relative m-3 rounded-md border-b p-4"
    >
      <div
        class="flex"
      >
        <div
          class="avatar self-center transition-all hover:scale-110"
        >
           
          <a
            href="/profile/test-user-id"
          >
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] "
              src="https://i.stack.imgur.com/34AD2.jpg"
              style="width: 2.5rem;"
            />
          </a>
        </div>
        <div
          class="ml-3"
        >
          <a
            href="/profile/test-user-id"
          >
            <p
              class="text-lg font-bold hover:underline"
            >
              Test User
            </p>
          </a>
          <p
            class="tex-gray-400 text-sm"
          >
            0 seconds ago
          </p>
        </div>
        <div
          class="absolute right-4 mt-[-12px] self-center"
        >
          <div
            class="dropdown-left dropdown rounded-md"
          >
            <button
              class="transition-all hover:scale-125"
              data-testid="comment-actions-button"
            >
              <div>
                <svg
                  height="24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 20q-.825 0-1.412-.587Q10 18.825 10 18q0-.825.588-1.413Q11.175 16 12 16t1.413.587Q14 17.175 14 18q0 .825-.587 1.413Q12.825 20 12 20Zm0-6q-.825 0-1.412-.588Q10 12.825 10 12t.588-1.413Q11.175 10 12 10t1.413.587Q14 11.175 14 12q0 .825-.587 1.412Q12.825 14 12 14Zm0-6q-.825 0-1.412-.588Q10 6.825 10 6t.588-1.412Q11.175 4 12 4t1.413.588Q14 5.175 14 6t-.587 1.412Q12.825 8 12 8Z"
                  />
                </svg>
              </div>
            </button>
            <ul
              class="dropdown-content menu mt-8 mr-[-16px] w-52 rounded-md border bg-white shadow"
              tabindex="0"
            >
              <li
                class="p-3 text-start transition-all hover:cursor-pointer hover:bg-gray-100"
                data-testid="edit-comment"
              >
                Edit
              </li>
              <li
                class="p-3 text-start transition-all hover:cursor-pointer hover:bg-gray-100"
                data-testid="delete-comment"
              >
                Delete
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="break-words"
      >
        <p
          class="mt-4 w-full"
        >
          Hello world
        </p>
      </div>
    </div>
  </div>
</body>
`;
